# ds_camp_capstone_task_my_fork

./: .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  api.py  config.py  instruction.ipynb  pyproject.toml
.github/workflows/: test.yml
.streamlit/: config.toml
data/: products.csv  products.index
src/ds_capstone/: data_loader.py  models.py  search_index.py  summarizer_graph.py  vectorizer.py
tests/: test_api.py  test_search_index.py  test_text_summarizer.py  test_text_vectorizer.py
ui/: main_page.py
ui/pages/: base_chat.py  semantic_search.py
