[tool.poetry]
name = "ds_capstone"
version = "0.1.0"
description = "Capstone project for DS camp 2025."
authors = [
    "Borys Lypa <blypa@amazinum.com>",
    "Viktoria Tsebriy <vik.tsebriy@gmail.com>"
]
readme = "README.md"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
files = "ds_capstone/**/*.py"
exclude = "^tests/"
ignore_missing_imports = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

known_pandas = "pandas,numpy"
sections = "FUTURE,STDLIB,THIRDPARTY,PANDAS,FIRSTPARTY,LOCALFOLDER"

import_heading_stdlib = "Standart library imports"
import_heading_thirdparty = "Thirdparty imports"
import_heading_firstparty = "Local imports"
import_heading_localfolder = "Local folder imports"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.5"
langchain-community = "^0.3.5"
langchain-openai = "^0.2.7"
langsmith = "^0.3.45"
langgraph = "^0.3.5"
langchain-ollama = "^0.3.5"
streamlit = "^1.40.2"
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
faiss-cpu = "^1.11.0.post1"
torch = "^2.7.1"
transformers = "^4.54.1"
pandas = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
isort = "^5.7.0"
poetry = "^1.8.4"
pre-commit = "^4.0.1"
honcho = "^2.0.0"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pandas-stubs = "^2.3.0.250703"
types-requests = "^2.32.4.20250611"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
